# fastapi-vercel

./: .gitignore  =0.0.9  CLAUDE.md  README.md  app.py  app_v2.py  app_v2_clean.py  config.py  db.py  logs_result.json  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  session_summary.json  test_results.json  topic_1.json  topic_10.json  topic_11.json  topic_2.json  topic_3.json  topic_4.json  topic_5.json  topic_6.json  topic_7.json  topic_8.json  topic_9.json  vercel.json
alembic/: env.py
data/: canto_1.txt  export.py  session.json  task_attempts.json
docs/: # Backend Compatibility Issues - Urgent .md  API_RESTRUCTURE_PROPOSAL.md  ARCHITECTURE_AUDIT.md  ENDPOINT_COMPARISON.md  FRONTEND_API_MIGRATION_GUIDE.md  IMPROVEMENT_PLAN.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_PROGRESS_SUMMARY.md  TASK_TELEGRAM_LINK.md  TELEGRAM_AUTH_API.md  TELEGRAM_AUTH_IMPLEMENTATION.md  TELEGRAM_AUTH_INTEGRATION_GUIDE.md  TESTING_STRATEGY.md
routes/: analysis.py  assignments.py  auth.py  auth_demo.py  course.py  learning.py  lesson.py  professor.py  professor_local.py  session.py  solution.py  student.py  student_form.py  submission.py  task.py  task_attempts.py  task_generator.py  telegram_auth.py  telegram_bot.py  topics.py  users.py
schemas/: __init__.py  api_models.py  learning_analytics.py  openapi_models.py  personalized_tasks.py  security.py  validation.py
scripts/: create_course_python_programming.py  export_openapi.py
tests/: README.md  conftest.py  e2e_test.py  test_api_v1.py  test_runner.py  test_telegram_auth.py
utils/: auth_dependencies.py  auth_middleware.py  auth_unified.py  cache_manager.py  checker.py  database_health.py  error_handling.py  evaluator.py  generator.py  (+13 more)
(+361 files in other folders)
