[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "fastapi-vercel"
version = "0.0.1"
description = "FastAPI project deployed on Vercel"
readme = "README.md"
requires-python = "3.9"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openai==1.99.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.36",
    "passlib==1.7.4",
    "requests==2.32.3",
    "anytree==2.12.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff"
]

[project.urls]
Source = "https://github.com/marcorichetta/fastapi-vercel"

[tool.black]
line-length = 120
fast = true
